# aem10900

./: .gitignore  README.org  aem10900.md  aem10900.yaml
c/: aem10900.c  aem10900.h  aem10900_reg.h
example_project/c_test/: .mxproject  CMakeLists.txt  c_test.ioc
example_project/c_test/Core/Inc/: main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
example_project/c_test/Core/Src/: main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
example_project/c_test/cmake/stm32cubemx/: CMakeLists.txt
example_project/rs_test/: Cargo.toml
example_project/rs_test/src/: main.rs
rust/: Cargo.toml
rust/src/: config.rs  device.rs  error.rs  lib.rs  registers.rs
