[package]
name = "aem10900"
version = "0.9.2"
authors = ["Silvano Cortesi <silvano.cortesi@hotmail.com>"]
description = "Driver crate for the AEM10900 Energy Harvester"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "no-std", "energy", "harvester"]
edition = "2021"
license = "LGPL-3.0"
repository = "https://github.com/trembel/aem10900"
readme = "../README.org"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = "0.8.0"
maybe-async = "0.2.10"
defmt = { version = "0.3", optional = true }

[features]
default = ["async"]
async = []
defmt = ["dep:defmt"]
